k8s/02-nginx-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx-svc
  namespace: frontend
  labels:
    name: frontend-nginx-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    name: frontend-nginx
---
